    (Ashish Thusoo through zshao)

    HIVE-98. Dependency management with hadoop core using ivy.
    (Ashish Thusoo through zshao)

    HIVE-73. Thrift Server and Client for Hive (Raghu through zshao)

    HIVE-113. Distribute by and sort by support. (zshao)

    HIVE-118. Add date related functions. (zshao)

    HIVE-62. Support nested types.
    (Ashish Thusoo via dhruba)

  IMPROVEMENTS

    HIVE-180. Data Generator for thrift-serialized sequence files. (zshao)

    HIVE-157. Update README.txt to remove refs to mirror.facebook.com. (zshao)

    HIVE-95. Improve cli error messages by lowering backtracking to 1.
    (Pete Wyckoff through zshao)

    HIVE-102. Refactor DDLTask. (Johan Oskarsson through zshao)

    HIVE-85. New compression options for Hive. (Joydeep Sarma through zshao)

    HIVE-69. genMapRedTasks uses tree walker. (Namit through zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-104. Tables with at least 1 non-string columns to use DynamicSerDe.
    (zshao)

    HIVE-158. Make table aliases work for sampled tables in joins.
    (Raghotham Murthy via zshao)

    HIVE-168. Fixed join on a subquery with a group by. (Namit Jain via zshao)

    HIVE-169. Fixed configuration parameter used for determining join interval 
    in JoinOperator. (Namit Jain via zshao)

    HIVE-147. Add a tool for extracting lineage info from hive sql.
    (Suresh Antony via zshao)

    HIVE-114. Drop partition does not delete data for external tables now.
    (Johan Oskarsson via zshao)

    HIVE-144. Hive/ql java source copied to build/ql/java to make it work 
    with eclipse. (Johan Oskarsson via zshao)

    HIVE-129. Fix aux.jar packaging to work properly with 0.17 and 0.18 
    versions of hadoop. (Joydeep Sarma via zshao)

    HIVE-162. Fix join0.q test failure with hadoop 0.17. (zshao)

    HIVE-146. Fix builds for non-default build directory.
    (David Phillips through zshao)

    HIVE-47. CLI to support multiline queries from an input file.
    (Ashish through zshao)