@@ -26,6 +26,8 @@ import java.util.Iterator;
 import java.util.Map;
 import java.io.Serializable;
 import java.lang.reflect.Method;
+import java.lang.reflect.Field;
+import java.lang.IllegalAccessException;
 
 import org.apache.hadoop.hive.ql.metadata.HiveException;
 import org.apache.hadoop.hive.ql.plan.aggregationDesc;
@@ -37,13 +39,22 @@ import org.apache.hadoop.hive.serde2.objectinspector.ObjectInspectorFactory;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hive.ql.parse.RowResolver;
 import org.apache.hadoop.hive.ql.parse.OpParseContext;
+import org.apache.hadoop.hive.ql.typeinfo.TypeInfo;
+import org.apache.hadoop.hive.ql.typeinfo.PrimitiveTypeInfo;
+import org.apache.hadoop.hive.conf.HiveConf;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 
 /**
  * GroupBy operator implementation.
  */
 public class GroupByOperator extends Operator <groupByDesc> implements Serializable {
 
+  static final private Log LOG = LogFactory.getLog(JoinOperator.class.getName());
+
   private static final long serialVersionUID = 1L;
+  private static final int  NUMROWSESTIMATESIZE = 1000;
+
   transient protected ExprNodeEvaluator[] keyFields;
   transient protected ExprNodeEvaluator[][] aggregationParameterFields;
   // In the future, we may allow both count(DISTINCT a) and sum(DISTINCT a) in the same SQL clause,
@@ -68,6 +79,38 @@ public class GroupByOperator extends Operator <groupByDesc> implements Serializa
   transient boolean firstRow;
   transient long    totalMemory;
   transient boolean hashAggr;
+
+  /**
+   * This is used to store the position and field names for variable length fields.
+   **/
+  class varLenFields {
+    int           aggrPos;
+    List<Field>   fields;
+    varLenFields(int aggrPos, List<Field> fields) {
+      this.aggrPos = aggrPos;
+      this.fields  = fields;
+    }
+
+    int getAggrPos() {
+      return aggrPos;
+    }
+
+    List<Field> getFields() {
+      return fields;
+    }
+  };
+
+  // for these positions, some variable primitive type (String) is used, so size cannot be estimated. sample it at runtime.
+  transient List<Integer> keyPositionsSize;
+
+  // for these positions, some variable primitive type (String) is used for the aggregation classes
+  transient List<varLenFields> aggrPositions;
+
+  transient int           fixedRowSize;
+  transient long          maxHashTblMemory;
+  transient int           totalVariableSize;
+  transient int           numEntriesVarSize;
+  transient int           numEntriesHashTable;
 
   public void initialize(Configuration hconf) throws HiveException {
     super.initialize(hconf);
@@ -149,7 +192,9 @@ public class GroupByOperator extends Operator <groupByDesc> implements Serializa
     } else {
       hashAggregations = new HashMap<ArrayList<Object>, UDAF[]>();
       hashAggr = true;
+      keyPositionsSize = new ArrayList<Integer>();
     }
+
     // init objectInspectors
     int totalFields = keyFields.length + aggregationClasses.length;
     objectInspectors = new ArrayList<ObjectInspector>(totalFields);
@@ -162,6 +207,132 @@ public class GroupByOperator extends Operator <groupByDesc> implements Serializa
     }
     
     firstRow = true;
+    // estimate the number of hash table entries based on the size of each entry. Since the size of a entry
+    // is not known, estimate that based on the number of entries
+    if (conf.getMode() == groupByDesc.Mode.HASH)
+      computeMaxEntriesHashAggr(hconf);
+  }
+
+  /**
+   * Estimate the number of entries in map-side hash table. 
+   * The user can specify the total amount of memory to be used by the map-side hash. By default, all available
+   * memory is used. The size of each row is estimated, rather crudely, and the number of entries are figure out
+   * based on that. 
+   * @return number of entries that can fit in hash table - useful for map-side aggregation only
+   **/
+  private void computeMaxEntriesHashAggr(Configuration hconf) {
+    maxHashTblMemory = (long)(HiveConf.getFloatVar(hconf, HiveConf.ConfVars.HIVEMAPAGGRHASHMEMORY) * Runtime.getRuntime().maxMemory());
+    estimateRowSize();
+  }
+
+  private static final int javaObjectOverHead    = 16;
+  private static final int javaHashEntryOverHead = 64;
+  private static final int javaSizePrimitiveType = 16;
+  private static final int javaSizeUnknownType   = 256;
+
+  /**
+   * The size of the element at position 'pos' is returned, if possible. 
+   * If the datatype is of variable length, STRING, a list of such key positions is maintained, and the size for such positions is
+   * then actually calculated at runtime.
+   * @param pos the position of the key
+   * @param c   the type of the key
+   * @return the size of this datatype
+   **/
+  private int getSize(int pos, Class<?> c) {
+    if (c.isPrimitive() ||
+        c.isInstance(new Boolean(true)) ||
+        c.isInstance(new Byte((byte)0)) ||
+        c.isInstance(new Short((short)0)) ||
+        c.isInstance(new Integer(0)) ||
+        c.isInstance(new Long(0)) ||
+        c.isInstance(new Float(0)) ||
+        c.isInstance(new Double(0)))
+      return javaSizePrimitiveType;
+
+    if (c.isInstance(new String())) {
+      keyPositionsSize.add(new Integer(pos));
+      return javaObjectOverHead;
+    }
+      
+    return javaSizeUnknownType;
+  }
+
+  /**
+   * The size of the element at position 'pos' is returned, if possible. 
+   * If the field is of variable length, STRING, a list of such field names for the field position is maintained, and the size 
+   * for such positions is then actually calculated at runtime.
+   * @param pos the position of the key
+   * @param c   the type of the key
+   * @param f   the field to be added
+   * @return the size of this datatype
+   **/
+  private int getSize(int pos, Class<?> c, Field f) {
+    if (c.isPrimitive() ||
+        c.isInstance(new Boolean(true)) ||
+        c.isInstance(new Byte((byte)0)) ||
+        c.isInstance(new Short((short)0)) ||
+        c.isInstance(new Integer(0)) ||
+        c.isInstance(new Long(0)) ||
+        c.isInstance(new Float(0)) ||
+        c.isInstance(new Double(0)))
+      return javaSizePrimitiveType;
+
+    if (c.isInstance(new String())) {
+      int idx = 0;
+      varLenFields v = null;
+      for (idx = 0; idx < aggrPositions.size(); idx++) {
+        v = aggrPositions.get(idx);
+        if (v.getAggrPos() == pos)
+          break;
+      }
+
+      if (idx == aggrPositions.size()) {
+        v = new varLenFields(pos, new ArrayList<Field>());
+        aggrPositions.add(v);
+      }
+
+      v.getFields().add(f);
+      return javaObjectOverHead;
+    }
+      
+    return javaSizeUnknownType;
+  }
+
+  /**
+   * @param pos position of the key
+   * @param typeinfo type of the input
+   * @return the size of this datatype
+   **/
+  private int getSize(int pos, TypeInfo typeInfo) {
+    if (typeInfo instanceof PrimitiveTypeInfo) 
+      return getSize(pos, typeInfo.getPrimitiveClass());
+    return javaSizeUnknownType;
+  }
+
+  /**
+   * @return the size of each row
+   **/
+  private void estimateRowSize() {
+    // estimate the size of each entry - 
+    // a datatype with unknown size (String/Struct etc. - is assumed to be 256 bytes for now).
+    // 64 bytes is the overhead for a reference
+    fixedRowSize = javaHashEntryOverHead;
+
+    ArrayList<exprNodeDesc> keys = conf.getKeys();
+
+    // Go over all the keys and get the size of the fields of fixed length. Keep track of the variable length keys
+    for (int pos = 0; pos < keys.size(); pos++)
+      fixedRowSize += getSize(pos, keys.get(pos).getTypeInfo());
+
+    // Go over all the aggregation classes and and get the size of the fields of fixed length. Keep track of the variable length
+    // fields in these aggregation classes.
+    for(int i=0; i < aggregationClasses.length; i++) {
+      fixedRowSize += javaObjectOverHead;
+      Class<? extends UDAF> agg = aggregationClasses[i];
+      Field[] fArr = agg.getFields();
+      for (Field f : fArr) 
+        fixedRowSize += getSize(i, agg, f);
+    }
   }
 
   protected UDAF[] newAggregations() throws HiveException {      
@@ -182,6 +353,7 @@ public class GroupByOperator extends Operator <groupByDesc> implements Serializa
   protected void updateAggregations(UDAF[] aggs, Object row, ObjectInspector rowInspector, boolean hashAggr, boolean newEntry,
                                     Object[][] lastInvoke) throws HiveException {
     for(int ai=0; ai<aggs.length; ai++) {
+
       // Calculate the parameters 
       Object[] o = new Object[aggregationParameterFields[ai].length];
       for(int pi=0; pi<aggregationParameterFields[ai].length; pi++) {
@@ -266,14 +438,12 @@ public class GroupByOperator extends Operator <groupByDesc> implements Serializa
       hashAggregations.put(newKeys, aggs);
       newEntry = true;
     }
-    
+
     // Update the aggs
     updateAggregations(aggs, row, rowInspector, true, newEntry, null);
     
-    // currently, we use a simple approximation - if 90% of memory is being
-    // used, flush 
-    long freeMemory = Runtime.getRuntime().freeMemory();
-    if (shouldBeFlushed(totalMemory, freeMemory)) {
+    // based on used-specified pramaters, check if the hash table needs to be flushed
+    if (shouldBeFlushed(newKeys)) {
       flush();
     }
   }
@@ -308,13 +478,52 @@ public class GroupByOperator extends Operator <groupByDesc> implements Serializa
     updateAggregations(aggs, row, rowInspector, false, false, lastInvoke);
   }
 
-  private boolean shouldBeFlushed(long total, long free) {
-    if (10 * free >= total)
+  /**
+   * Based on user-parameters, should the hash table be flushed.
+   * @param newKeys keys for the row under consideration
+   **/
+  private boolean shouldBeFlushed(ArrayList<Object> newKeys) {
+    int numEntries = hashAggregations.size();
+
+    // The fixed size for the aggregation class is already known. Get the variable portion of the size every NUMROWSESTIMATESIZE rows.
+    if ((numEntries % NUMROWSESTIMATESIZE) == 0) {
+      for (Integer pos : keyPositionsSize) {
+        Object key = newKeys.get(pos.intValue());
+        totalVariableSize += ((String)key).length();
+      }
+
+      UDAF[] aggs = null;
+      if (aggrPositions.size() > 0)
+        aggs = hashAggregations.get(newKeys);
+
+      for (varLenFields v : aggrPositions) {
+        int     aggrPos          = v.getAggrPos();
+        List<Field> fieldsVarLen = v.getFields();
+        UDAF    agg              = aggs[aggrPos];
+
+        try 
+        {
+          for (Field f : fieldsVarLen)
+            totalVariableSize += ((String)f.get(agg)).length();
+        } catch (IllegalAccessException e) {
+          assert false;
+        }
+      }
+
+      numEntriesVarSize++;
+      // Update the number of entries that can fit in the hash table
+      numEntriesHashTable = (int)(maxHashTblMemory / (fixedRowSize + ((int)totalVariableSize/numEntriesVarSize)));
+      LOG.trace("Hash Aggr: #hash table = " + numEntries + " #max in hash table = " + numEntriesHashTable);
+    }
+
+    // flush if necessary
+    if (numEntries >= numEntriesHashTable)
       return true;
     return false;
   }
 
   private void flush() throws HiveException {
+    
     // Currently, the algorithm flushes 10% of the entries - this can be
     // changed in the future
 
