@@ -24,6 +24,7 @@ STAGE PLANS:
                   value expressions:
                         expr: 0
                         type: bigint
+      # Reducers: 1
       Reduce Operator Tree:
         Group By Operator
           aggregations:
